[tool.poetry]
name = "python-fragment"
version = "0.2.0"
description = "Reverse engineered Fragment API that mimics the official webclient"
authors = ["ren3104 <2ren3104@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ren3104/python-fragment"
repository = "https://github.com/ren3104/python-fragment"
keywords = [
    "async",
    "asyncio",
    "fragment",
    "ton",
    "telegram"
]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Typing :: Typed"
]
packages = [
    { include = "fragment", from = "." }
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/ren3104/python-fragment/issues"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.6"
selectolax = {extras = ["cython"], version = "^0.3.17"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
