[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-fragment"
dynamic = ["version"]
description = "Reverse engineered Fragment API that mimics the official webclient"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "ren3104", email = "2ren3104@gmail.com" },
]
keywords = [
    "fragment",
    "fragment-api",
    "telegram",
    "ton",
    "toncoin"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
  "aiohttp>=3.3.0",
  "requests",
  "selectolax[cython]>=0.3.17,!=0.4.8",
  "typing-extensions>=4.0.0 ; python_version < '3.11'"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "unasyncd==0.10.0"
]

[project.urls]
Homepage = "https://github.com/ren3104/python-fragment"
Repository = "https://github.com/ren3104/python-fragment"
"Bug Tracker" = "https://github.com/ren3104/python-fragment/issues"

[tool.hatch.version]
path = "fragment/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["fragment"]

[tool.hatch.envs.default]
features = ["dev"]
post-install-commands = ["pre-commit install"]

[tool.unasyncd]
files = { "fragment/_async/client.py" = "fragment/_sync/client.py" }
add_replacements = { "AsyncClient" = "Client" }
add_editors_note = true
